Always paint background and shadow separately

The logic to piggyback shadow on background painting is complex and
fragile. For the bug, we skip painting background-color which is
obscured by background-image but we also slip shadow piggybacked on
painting background. The logic was added in WebKit for some graphics
library that can draw combined background and shadow faster.

It's confirmed that Skia doesn't benefit from the logic. Local perf
test (containing hundreds of divs with simple background and shadow)
showed this CL doesn't affect rasterization performance, and degrade
record performance by 0% to 40% because of more drawing operations to
handle. Considering that the test is an extreme example of background+
shadow which is unlikely to exist in real pages, the performance
impact of this CL on real pages will be acceptable.

Telemetry-cluster showed no regression on 10k web pages.

Remove the logic to simply code and fix the bug.

BUG=660187
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2464053003
Cr-Commit-Position: refs/heads/master@{#429738}

Former-commit-id: eac477641ec5fdf9e3b9ec52d46fc3a908e8503e